# bazel_androidx_benchmarks

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  bazel-bazel_androidx_benchmarks
src/test/: AndroidBenchmarkManifest.xml  AndroidTestManifest.xml  BUILD.bazel  progard_rules.pro
src/test/com/simple/: SimpleBenchmark.java  SimpleTest.java
